# Py-DSnA

./: README.md  pyproject.toml
challenges/array_binary_search/tests/: test_binary_search.py
challenges/array_shift/: README.md  array_shift.py
challenges/array_shift/tests/: test_array_shift.py
challenges/fifo_animal_shelter/: README.md
challenges/fifo_animal_shelter/tests/: test_fifo_animal_shelter.py
challenges/ll-merge/ll_merge/: node_.py
challenges/ll-merge/tests/: linked_list_.py
challenges/queue_with_stacks/: README.md  queue_with_stacks.py
challenges/queue_with_stacks/tests/: test_queue_with_stacks.py
data-structures/cc05-linked-list/: README.md
data-structures/stacks_and_queues/: list_queue.py  stacks_and_queues.py
py_dsna.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
py_dsna/401/challenges/array-binary-search/: README.md  pyproject.toml
py_dsna/401/challenges/array_binary_search/: README.md
py_dsna/401/challenges/array_reverse/: README.md  array_reverse.py
py_dsna/401/challenges/array_shift/: README.md  array_shift.py
py_dsna/401/challenges/cc-04_Whiteboard/: README.md
py_dsna/401/challenges/cc-09_Whiteboard/: README.md
py_dsna/401/challenges/fifo_animal_shelter/: README.md  fifo_animal_shelter.py  pyproject.toml
py_dsna/401/challenges/ll-insertions/: pyproject.toml
py_dsna/401/challenges/ll-merge/: README.md  pyproject.toml
py_dsna/401/challenges/queue_with_stacks/: README.md  pyproject.toml
py_dsna/401/challenges/queue_with_stacks/tests/: test_queue_with_stacks.py
tests/: test_py_dsna.py
(+31 files in other folders)
